Fixed scrollbar bug + fixed tileset bug + fixed white bar bug + fixed always tile 0 bug

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -2,3 +2,11 @@ body {
 	margin:0;
 	padding:0;
 }
+
+#taziosscreen {
+	position:fixed;
+	left:0;
+	right:0;
+	top:0;
+	bottom:0;
+}
